--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
         <br>
         <br>
         <footer>
-            ©
+            © 2020 f.Gorski
         </footer>
 
 </html>                
