--- a/deuxiéme.html
+++ b/deuxiéme.html
@@ -11,7 +11,8 @@
           <img src="img/logo17.jpg" alt="maitre yoda"/>
           
           <p>
-             <h2><u>Maître Yoda</u></h2><br>
+            <a href="index.html"title="Aller à l'Accueil">
+             <h2><u>Maître Yoda</u></h2></a><br>
               <br>
                 <h3><u>Dialecte de Maitre Yoda:</u></h3><br>
                   <br>
