--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         
                 <nav>
                     <ul>
-                       <li><a href="deuxiéme.html" target="_blank">Mon super lien génial vers (Que la Force Soit avec Toi)</a></li> 
+                       <li><a href="deuxiéme.html">Mon super lien génial vers (Que la Force Soit avec Toi)</a></li> 
                     </ul>  
                 </nav>
                 <div id ="paragraphe">
@@ -250,7 +250,7 @@
                          </table>
                          <br>
 
-                         <audio src="song/Star_Wars_song.mp3" controls autoplay></audio> <br>
+                         <audio src="song/Star_Wars_song.mp3" controls ></audio> <br>
                          <br>
 
                          <video src="video/yoda-vs-dark-sidious.mp4" poster="img/yoda-vs-dark-sidious.jpg" width="400" controls></video>
