mis a jour liens2

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>mon premier projet</title>
+    <title>mon site Mître yoda</title>
     <link rel="stylesheet" href="css/style.css" />
     <!-- <link rel="stylesheet" href="css/responsive.css" media="screen and (max-width:1080px)">-->
 
@@ -10,16 +10,16 @@
 
 <body>
     <div class="mesparagraphes">
-        <h1 id="monpremiertitre">Bienvenue sur mon site de maitre yoda.</h1>
+        <h1 id="monpremiertitre">Bienvenue sur mon site de maître yoda.</h1>
         <!-- DECLARATION D4UN LIEN EN HTML -->
 
         <nav>
             <ul>
-                <li><a href="http://https://app.netlify.com/sites/suitesitemaitreyoda">Mon super lien génial vers (Que la Force Soit avec Toi)</a></li>
+                <li><a href="https://suitesitemaitreyoda.netlify.com/">Mon super lien génial vers (Que la Force Soit avec Toi)</a></li>
             </ul>
         </nav>
         <div id="paragraphe">
-            <p> passionné de maitre yoda?! vous étes à la bonne adresse(web)</p>
+            <p> passionné de maître yoda?! vous étes à la bonne adresse(web)</p>
 
             <p>
                 Yoda est un personnage fictif de l'univers Star Wars. Il apparaît pour la première fois dans Star Wars,
@@ -391,13 +391,13 @@
                 <th>CAT: ARMES</th>
             </tr>
             <tr>
-                <td>Maitre jedi</td>
+                <td>Maître jedi</td>
                 <nav>
                     <td>Couleur Sabre Laser</td>
                 </nav>
             </tr>
             <tr>
-                <td>C'est Maitre Jedi</td>
+                <td>Maître Jedi</td>
                 <td>Son Sabre est Vert </td>
             </tr>
         </table>
