changement des liens, car nouveau nom de domaine et d'hébergement

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
     <div class="mesparagraphes">
         <h1 id="monpremiertitre">Bienvenue sur mon site de maître yoda.</h1>
-        <!-- DECLARATION D4UN LIEN EN HTML -->
+        <!-- DECLARATION D'UN LIEN EN HTML -->
 
         <nav>
             <ul>
-                <li><a href="https://suitesitemaitreyoda.netlify.com/">Mon super lien génial vers (Que la Force Soit avec Toi)</a></li>
+                <li><a href="../monPremierSite-gorskiflorent2/index.html">Mon super lien génial vers (Que la Force Soit avec Toi)</a></li>
             </ul>
         </nav>
         <div id="paragraphe">
